.k8/yamls/discord_bot_deployment.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: discord-bot
  namespace: REPLACE_NAMESPACE
spec:
  hosts:
  - "discord-bot.REPLACE_DOMAIN_SUFFIX"
  gateways:
  - discord-bot
  http:
  - route:
    - destination:
        host: discord-bot-svc
        port:
          number: 5000
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: discord-bot
  namespace: REPLACE_NAMESPACE
spec:
  selector:
    istio: ingressgateway-int
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "discord-bot.REPLACE_DOMAIN_SUFFIX"
---
apiVersion: v1
kind: Service
metadata:
  name: discord-bot-svc
  namespace: REPLACE_NAMESPACE
  labels:
    app: discord-bot
spec:
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
      name: port5000
  selector:
    app: discord-bot
---
apiVersion: REPLACE_API_VERSION 
kind: Deployment
metadata:
  labels:
    app: discord-bot
  name: discord-bot
  namespace: REPLACE_NAMESPACE
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: discord-bot
  template:
    metadata:
      labels:
        app: discord-bot
    spec:
      containers:
      - name: discord-bot
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG 
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: port5000
        command: ["/bin/sh", "-c", "yarn start"]
